# vitaxmb

./: .atomignore  CMakeLists.txt  README.md
resources/config/: main.json  xmb.json
resources/shaders/: clear_f.cg  clear_v.cg  color_picker_f.cg  color_picker_v.cg  debug_draw_f.cg  debug_draw_v.cg  xmb_back_f.cg  xmb_back_v.cg  xmb_f.cg  xmb_font_f.cg  xmb_font_v.cg  xmb_icon_f.cg  xmb_icon_v.cg  xmb_options_f.cg  xmb_options_v.cg  xmb_v.cg
sce_sys/livearea/contents/: template.xml
src/: main.cpp  xmb_settings.cpp  xmb_settings.h  xmb_sources.cpp  xmb_sources.h
src/common/: debugLog.cpp  debugLog.h  debugScreen.cpp  debugScreen.h  json.hpp  png.cpp  png.h  types.cpp  types.h
src/rendering/: 8ssedt.cpp  8ssedt.h  color_picker.cpp  color_picker.h  font.cpp  font.h  xmb.cpp  xmb.h  xmb_column.cpp  xmb_column.h  xmb_icon.cpp  xmb_icon.h  xmb_option.cpp  xmb_option.h  xmb_options_pane.cpp  xmb_options_pane.h  xmb_sub_icon.cpp  xmb_sub_icon.h  xmb_wave.cpp  xmb_wave.h
src/system/: buffer.cpp  buffer.h  config.cpp  config.h  device.cpp  device.h  display_buffers.cpp  display_buffers.h  file.cpp  file.h  gpu.cpp  gpu.h  gpu_utils.cpp  gpu_utils.h  input.cpp  input.h  screen.cpp  screen.h  shaders.cpp  shaders.h  texture.cpp  texture.h
src/tools/: 8ssedt.cpp  bin_packing.c  bin_packing.h  interpolator.cpp  interpolator.hpp  math.cpp  math.h  parse_application.cpp  parse_application.h  perlin.hpp
